--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
     <script>
         // ★★★ここにGASのURLを貼る★★★
-        const GAS_URL = "ここにあなたのGASウェブアプリURLを貼り付け";
+        const GAS_URL = "https://script.google.com/macros/s/AKfycbx4bzXhqEJ3F_xRMMVxRUH-FEC9YAtbR_h25FEhax5PTMjWya0xih7Eo6YRuVXd_RGe/exec";
 
         function switchTab(tabName) {
             document.querySelectorAll('.container').forEach(el => el.classList.remove('active'));
